change server and fix

--- a/app/loading.html
+++ b/app/loading.html
@@ -8,7 +8,7 @@
   <style>
     /* Additional custom styles if needed */
     body {
-      background-color: #5a0c18;
+      background-color: #800020;
     }
     .loading-container {
       display: flex;
