--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Desk Health</title>
+  <title>ENGi:Take a Break </title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 </head>
