--- a/app/popup.html
+++ b/app/popup.html
@@ -11,7 +11,6 @@
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
@@ -25,6 +24,9 @@
   <style>
     body {
       font-family: 'Kanit', sans-serif;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
     }
     .card {
       background-color: #800020; /* Change this to your preferred background color */
@@ -45,13 +47,13 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row justify-content-center mt-2">
+  <div class="container-fluid min-vh-100 d-flex flex-column">
+    <div class="row justify-content-center mt-2 flex-grow-1">
       <div class="col-lg-12">
         <div class="mb-2" id="player"></div>
       </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center flex-grow-1">
       <div class="col-lg-12 text-center">
         <div class="card">
           <div class="card-body">
