--- a/app/popup.html
+++ b/app/popup.html
@@ -47,17 +47,17 @@
 </head>
 
 <body>
-  <div class="container-fluid min-vh-100 d-flex flex-column">
-    <div class="row justify-content-center mt-2 flex-grow-1">
+  <div class="container-fluid">
+    <div class="row justify-content-center mt-2">
       <div class="col-lg-12">
         <div class="mb-2" id="player"></div>
       </div>
     </div>
-    <div class="row justify-content-center flex-grow-1">
+    <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
         <div class="card">
           <div class="card-body">
-            <div id="timeLeft"></div>
+           <div id="timeLeft"></div>
           </div>
         </div>
       </div>
