--- a/app/popup.html
+++ b/app/popup.html
@@ -27,37 +27,46 @@
       margin: 0;
       padding: 0;
       overflow-x: hidden;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .container-fluid {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card {
       background-color: #800020; /* Change this to your preferred background color */
       color: #ffffff; /* Change this to your preferred font color */
     }
     .card-body {
-      padding: 1.5rem; /* Optional: Adjust padding as needed */
+      padding: 1.0rem; /* Optional: Adjust padding as needed */
     }
     /* Add any additional custom styles here */
-
     #player {
       border-radius: 10px; /* Adjust the radius as needed */
       background-color: #e9ecef; /* Optional: Add background color if needed */
       padding: 1rem; /* Optional: Add padding if needed */
+      width: 100%;
     }
   </style>
   
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row justify-content-center mt-2">
+  <div class="container-fluid min-vh-100 d-flex flex-column">
+    <div class="row justify-content-center mt-2 flex-grow-1">
       <div class="col-lg-12">
         <div class="mb-2" id="player"></div>
       </div>
     </div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center flex-grow-1 mb-3">
       <div class="col-lg-12 text-center">
         <div class="card">
           <div class="card-body">
-           <div id="timeLeft"></div>
+            <div id="timeLeft"></div>
           </div>
         </div>
       </div>
